--- a/frontend/src/components/Landings/LandingAdult/LandingPage.css
+++ b/frontend/src/components/Landings/LandingAdult/LandingPage.css
@@ -6,6 +6,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  box-sizing: border-box;
+  overflow-x: hidden;
   height: 100%;
   width: 100%; /* Asegura que ocupe todo el ancho */
 }
@@ -13,7 +15,6 @@
 @media (max-width: 768px) {
   .landingContainer {
     background-position: center; /* Centra la imagen en pantallas más pequeñas */ 
-    height: 150vh; /* Ajusta la altura del contenedor en pantallas más pequeñas */
   }
 }
 
