--- a/frontend/src/components/AboutUs/AboutUsAdult/AboutUsAdult.css
+++ b/frontend/src/components/AboutUs/AboutUsAdult/AboutUsAdult.css
@@ -51,15 +51,17 @@
 .AboutUsAdult-Image {
   grid-column: 2; /* Poner la imagen en la segunda columna */
   grid-row: 1/3;
-  border-radius: 20px;
+  margin-left: 100px;
+ /*  border-radius: 20px;
   justify-self: center;
-  margin-right: 100px;
-  width: 500px;
+  
+  width: 100px; */
 }
 
-.AboutUAdults-Image img {
-  margin-top: 46px;
-  height: auto;
+.AboutUsAdult-Image img {
+  width: 550px; /* Ajusta el ancho */
+
+  height: auto; /* Mantiene la proporción de la imagen */
 }
 /* Media Query para pantallas grandes (1440px) */
 @media (max-width: 1440px) {
@@ -77,9 +79,8 @@
     font-size: 1.1rem;
   }
 
-  .AboutUsAdult-Image {
-    width: 450px; /* Ajustamos el ancho de la imagen */
-    margin-right: 50px;
+  .AboutUsAdult-Image img {
+  width: 500px;
   }
 }
 
@@ -150,10 +151,15 @@
     height: 50%;
     margin: 0;
   }
+  .AboutUsAdult-Image{
+    margin-left: 0;
+  }
 
   .AboutUsAdult-Image img {
     width: 350px; /* Ajustamos el tamaño de la imagen */
     margin-bottom: 30px;
+  
+  
   }
  
 }
