--- a/frontend/src/components/Cart.css
+++ b/frontend/src/components/Cart.css
@@ -105,12 +105,13 @@
 
 @media (max-width: 1440px) {
   .cart-container {
-    width: 20%; /* Ajusta el ancho del contenedor en pantallas medianas */
+    width: 30%; /* Ajusta el ancho del contenedor en pantallas medianas */
     justify-content: flex-start;
 
 
   }
 .cart-icon{
+  width: 100px;
   font-size: 1.3rem;
 }
   .cart-dropdown {
@@ -153,12 +154,13 @@
 /* Pantallas muy pequeñas (smartphones por debajo de 480px) */
 @media (max-width: 480px) {
   .cart-container {
-    width: 100%;
+    padding: 0;
+    width: 50px;
     justify-content: flex-start; /* Alinea el icono a la derecha si es necesario */
   }
 
   .cart-icon {
-    font-size: .8rem; /* Reduce aún más el tamaño del icono */
+    font-size: .9rem; /* Reduce aún más el tamaño del icono */
   }
 
   .cart-dropdown {
