--- a/frontend/src/components/plans/Plans.css
+++ b/frontend/src/components/plans/Plans.css
@@ -2,12 +2,15 @@
     background-color: #0d161c;
     width: 100%;
     height: 100%;
-    min-height: 650px;
+    min-height: 750px;
     margin-top: 100px;
     padding-top: 50px;
     text-align: center;
 }
-
+.plansContainer-White{
+    min-height: 700px;
+    background-color: #2C3E50;
+}
 /* Título principal */
 .plansContainer .head {
     color: white;
@@ -20,10 +23,14 @@
 .highlight {
     color: #7564f4; /* Cambia a morado solo la palabra "educación" */
 }
+.highlight-White{
+    color: #00A8E8;
+}
 
 .plansContainer p {
     font-size: 1rem;
     color: #989399;
+    margin-bottom: 4rem;
 }
 
 /* Cuadro de cada plan */
@@ -34,6 +41,9 @@
     padding: 10px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.containerBox-White{
+    background-color: #fff;
 }
 
 .paraContainer {
@@ -52,7 +62,7 @@
 }
 
 .plansBox p {
-    color: gray;
+    color: rgb(255, 255, 255);
     width: 80%;
     margin: auto;
     height: 5rem;
@@ -60,21 +70,19 @@
 
 /* Reajustamos el grid para mayor flexibilidad en diferentes tamaños de pantalla */
 .plansBox {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(4, 1fr);
     gap: 150px;
-    justify-content: space-around;
+    justify-content: center;
     margin: 40px 200px;
 }
 
 /* Ajuste para pantallas 1440px */
 @media (max-width: 1440px) {
-    .plansBox {
-        grid-template-columns: repeat(3, 1fr);  /* 3 columnas para pantallas medianas */
-        gap: 15px;
-    }
+
 
     .containerBox {
+        height: 400px;
         width: 320px;  /* Ajustamos el ancho de los cuadros */
     }
 
@@ -86,10 +94,9 @@
 /* Ajuste para pantallas 768px (tablets) */
 @media (max-width: 768px) {
     .plansContainer{
-        height: 1400px;
+        height: 100px;
     }
     .plansBox {
-        grid-template-columns: 1fr;  /* 1 columna para pantallas muy pequeñas */
         gap: 30px;
         margin: 0;
     }
@@ -110,12 +117,12 @@
 }
 
 /* Ajuste para pantallas pequeñas (smartphones) - 390px */
-@media (max-width: 400px) {
+@media (max-width: 480px) {
     .plansContainer{
-        height: 80%;
+        height: 70rem;
     }
     .plansBox {
-        grid-template-columns: 1fr;  /* 1 columna para pantallas muy pequeñas */
+        flex-direction: column;
         gap: 30px;
         margin: 0;
     }
