--- a/frontend/src/components/Premiun/PricingCard.css
+++ b/frontend/src/components/Premiun/PricingCard.css
@@ -24,6 +24,7 @@
 
 /* Estilos para el título */
 .pricing-card h3 {    
+  margin-top: 50px;
   font-size: 2.5rem;
   color: #ffffff;
   position: relative;
