--- a/frontend/src/components/Rutas/RutasPage/RutasPage.css
+++ b/frontend/src/components/Rutas/RutasPage/RutasPage.css
@@ -1,11 +1,12 @@
 .rutasContainerGeneral {
-    background-image: url('../../images/fondo.png'); 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 0;
-    margin: 0; 
-    height: 100%;
-    width: 100%;
+  background-image: url('../../images/fondo.png'); 
+  background-size: cover; /* La imagen siempre cubrirá todo el contenedor */
+  background-position: center; /* Centrar la imagen */
+  background-repeat: no-repeat; /* No repetir la imagen */
+  padding: 0;
+  margin: 0;
+  min-height: 100vh; /* Asegura que cubra toda la pantalla */
+  width: 100%; /* Ocupará el ancho completo */
+  height: auto; /* Ajusta la altura automáticamente al contenido */
   }
   
