--- a/frontend/src/components/WebCart/WebCartKids/Card.css
+++ b/frontend/src/components/WebCart/WebCartKids/Card.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 /* Configuración general de la lista de tarjetas */
 .cardList {
   display: grid;
+  margin: 20px auto; /* Centrar horizontalmente */
+  max-width: 160vh; /* Ancho máximo para limitar el contenido */
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 26px;
   padding: 16px;
   justify-content: center;
+  align-items: center;    /* Centra las tarjetas verticalmente */
+  box-sizing: border-box; /* Evita problemas de margen y padding */
   background-color: #ffffff; /* Fondo oscuro que coincide con la temática */
 }
 
@@ -33,6 +38,7 @@
 
 /* Ajuste para la imagen dentro de la tarjeta */
 .card img {
+
   width: 12rem;
   height: 8rem;
   margin: auto;
@@ -41,6 +47,7 @@
 
 /* Estilos para los títulos */
 .card h3 {
+  font-family: 'Montserrat', sans-serif;
   margin: 16px 0;
   font-size: 1.5rem;
   color: #FFFFFF;  /* Título en blanco */
@@ -55,12 +62,14 @@
 }
 
 .title {
+  font-family: 'Montserrat', sans-serif;
   color: #FFFFFF;
   text-align: center;
 }
 
 /* Descripción del curso */
 .description {
+  font-family: 'Poppins', sans-serif;
   color: #D0D0D0;  /* Texto en gris claro */
   text-align: center;
   font-size: 0.9rem;
@@ -68,6 +77,7 @@
 
 /* Título general de la sección de cursos */
 .tittleCourseKids {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   padding: 20px;
   font-size: 2rem;
@@ -83,6 +93,7 @@
 
 /* Estilos para el botón de compra */
 .card button {
+  font-family: 'Montserrat', sans-serif;
   padding: 10px;
   background-color: #FDD835;  /* Fondo amarillo vibrante */
   color: #000000;  /* Texto negro */
@@ -112,8 +123,10 @@
 
 /* Estilos para el precio */
 .price {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 1.4rem;
   color: #FFFFFF;  /* Texto en blanco */
+  font-weight: 700; /* Resaltado */
   padding-top: 20px;
 }
