--- a/frontend/src/components/paginasCursos/CourseDetail.css
+++ b/frontend/src/components/paginasCursos/CourseDetail.css
@@ -84,3 +84,27 @@
   resize: vertical;
   color: black;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal-content button {
+  margin: 10px;
+}
