corregido el header

--- a/frontend/src/components/Pago/pagoKids/PurchaseSteps.css
+++ b/frontend/src/components/Pago/pagoKids/PurchaseSteps.css
@@ -1,18 +1,18 @@
 /* Contenedor principal con tamaño reducido */
 .purchase-steps-container {
-  max-width: 500px; /* Limita el ancho máximo del formulario */
-  width: 100%; /* Se adapta al tamaño de la pantalla */
-  margin: 40px auto; /* Centrado vertical y horizontal */
-  padding: 20px; /* Espaciado interno */
-  border: 1px solid #ccc; /* Borde suave */
-  border-radius: 10px; /* Bordes redondeados */
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); /* Sombra más suave */
-  background-color: #fff; /* Fondo blanco */
-  font-family: Arial, sans-serif; /* Fuente limpia */
+  max-width: 500px;
+  width: 100%;
+  margin: 40px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
+  font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-sizing: border-box; /* Asegura que el padding no se quede fuera del ancho total */
+  box-sizing: border-box;
 }
 
 /* Contenedor de cada paso con el ancho al 50% y centrado */
@@ -132,3 +132,4 @@
     width: 80%;
   }
 }
+
