--- a/frontend/src/components/becas/beca.css
+++ b/frontend/src/components/becas/beca.css
@@ -21,7 +21,7 @@
 
 .highlight-text {
   font-size: 3em;
-  color: #1976D2;
+  color: #1c154f;
   font-family: 'Comic Sans MS', cursive, sans-serif;
   margin-bottom: 15px;
 }
@@ -92,7 +92,7 @@
 }
 
 .submit-button {
-  background-color: #1976D2;
+  background-color: #1c154f;
   font-family: 'Roboto', sans-serif;
   color: white;
   font-size: 1.2em;
@@ -129,3 +129,52 @@
     font-size: 1.2em;
   }
 }
+
+/* Estilo para la superposición (overlay) */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Asegura que esté encima de otros elementos */
+}
+
+/* Estilo para el cuadro de advertencia */
+.warning-box {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 300px;
+}
+
+/* Texto dentro del cuadro */
+.warning-box p {
+  margin: 0 0 10px 0;
+  font-size: 1rem;
+  color: #333;
+}
+
+/* Botón para cerrar el cuadro */
+.close-button {
+  background-color: #8c52ff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.close-button:hover {
+  background-color: #350791;
+}
+
+
